DTSCCI-3976: Refactor into bulk deletion for dashboard notifications and actions (DTSCCI-5163)